[package]
name = "easy-threadpool"
version = "0.1.0"
authors = ["Nico Elbers"]
edition = "2021"
rust-version = "1.72.0"
description = "A relatively simple thread pool which you can send jobs to"

keywords = ["threadpool", "simple"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
