[package]
name = "easy-threadpool"
version = "0.3.1"
authors = ["Nico Elbers"]
edition = "2021"
rust-version = "1.72.0"
description = "A relatively simple thread pool which you can send jobs to"
license = "MIT"
readme = "README.md"
repository = "https://github.com/NicoElbers/easy_threadpool"


keywords = ["threadpool", "simple"]

[package.metadata.docs.rs]
all-features = true

[dependencies]

